# adaptive-rag

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: default.yaml
prompts/: no_retrieval.txt  reflect_critique.txt  retrieval_useful_judge.txt  retrieve_decision.txt  with_retrieval.txt
scripts/: build_index.py  build_index_colab.ipynb  run_ablation_adaptive.py  run_all_baselines.sh  run_baseline.py  summarize_baselines.py  train_retrieval_classifier.py
src/adaptive_rag/: __init__.py  schemas.py
src/adaptive_rag/corpus/: build_index.py
src/adaptive_rag/data/: __init__.py  loaders.py
src/adaptive_rag/decision/: __init__.py  base.py  blended.py  classifier.py  factory.py  heuristic.py  judge.py  parsing.py  prompt_decider.py  reflect.py
src/adaptive_rag/eval/: __init__.py  loader.py  metrics.py
src/adaptive_rag/llm/: __init__.py  base.py  gemini.py
src/adaptive_rag/logging/: __init__.py  jsonl_logger.py
src/adaptive_rag/pipeline/: __init__.py  runner.py
src/adaptive_rag/retriever/: __init__.py  base.py  faiss_retriever.py
src/adaptive_rag/strategies/: __init__.py  adaptive.py  base.py  fixed_k.py  no_retrieval.py
tests/: test_adaptive_pipeline.py  test_decision_parsing.py
