[project]
name = "adaptive-rag"
version = "0.1.0"
description = "Adaptive retrieval-augmented generation: selective retrieve-or-not decisions and baselines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "datasets>=2.18.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
